# audacity

./: Makefile.in  configure
help/: Makefile.in
images/: Makefile.in
lib-src/: Makefile.in
lib-src/libscorealign/: audiomixerreader.cpp  audiomixerreader.h  scorealign-glue.cpp  scorealign-glue.h
lib-src/portaudio-v19/: Makefile.in
lib-src/portmidi/: configure.ac
lib-src/portmidi/pm_common/: Makefile.am
lib-src/portmidi/pm_test/: Makefile.am
lib-src/portsmf/: allegrosmfrd.cpp
m4/: audacity_checklib_portaudio.m4
mac/Audacity.xcodeproj/: project.pbxproj
src/: AColor.cpp  AColor.h  AudacityApp.cpp  AudacityApp.h  AudioIO.cpp  AudioIO.h  AutoRecovery.cpp  Benchmark.cpp  Envelope.cpp  Experimental.h  LabelTrack.cpp  LabelTrack.h  Makefile.am  Makefile.in  Menus.cpp  Menus.h  MixerBoard.cpp  MixerBoard.h  NoteTrack.cpp  NoteTrack.h  Project.cpp  Project.h  Sequence.cpp  Sequence.h  Snap.cpp  TimeTrack.h  Track.cpp  Track.h  TrackArtist.cpp  TrackPanel.cpp  TrackPanel.h  TrackPanelMouseEvent.h  TrackPanelResizeHandle.cpp  TrackPanelResizeHandle.h  UIHandle.h  ViewInfo.cpp  WaveClip.cpp  WaveClip.h  WaveTrack.cpp  WaveTrack.h  (+1 more)
src/blockfile/: ODDecodeBlockFile.cpp  SimpleBlockFile.cpp
src/commands/: CommandFlag.h
src/effects/: ScoreAlignDialog.cpp
src/import/: ImportMIDI.cpp  ImportMIDI.h  ImportRaw.cpp
src/prefs/: SpectrogramSettings.h  SpectrumPrefs.cpp
src/toolbars/: ControlToolBar.cpp  ToolsToolBar.cpp  TranscriptionToolBar.cpp
src/widgets/: ASlider.cpp  ASlider.h  PopupMenuTable.h
src/xml/: XMLTagHandler.cpp
tests/: Makefile.in
(+57 files in other folders)
